Configure frontend for Vercel deployment